examples/test/testpolicy4768.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4768
  namespace: namespace404
spec:
  podSelector:
    matchLabels:
      key40: value30
      key49: value35
      key8: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value7
          key0: value5
          key19: value45
      podSelector:
        matchLabels:
          key19: value29
